force-app/main/default/objects/Customer_Reference__c/Customer_Reference__c.object-meta.xml
<CustomObject>
    <description>An object to house customer reference and logo information.</description>
    <label>Customer Reference</label>
    <nameField>
        <displayFormat>CR-{0}</displayFormat>
        <label>Customer Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>