force-app/main/default/objects/Customer_Reference__c/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <formula>TEXT ( Company_Name__r.Industry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Industry</label>
    <type>Text</type>
</CustomField>