force-app/main/default/objects/Customer_Reference__c/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <formula>TEXT (Company_Name__r.Billing_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>