force-app/main/default/objects/Customer_Reference__c/fields/Approved_for_use__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_use__c</fullName>
    <inlineHelpText>Is this customer a reference?</inlineHelpText>
    <label>Approved for use?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with restrictions</fullName>
            </value>
            <value>
                <fullName>Yes under NDA</fullName>
            </value>
            <value>
                <fullName>No with exception</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>