force-app/main/default/objects/Customer_Reference__c/fields/Business_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Business_Benefit__c</fullName>
    <description>What&apos;s the potential impact to people?
What&apos;s the potential impact to industry?</description>
    <inlineHelpText>What&apos;s the potential impact to people?
What&apos;s the potential impact to industry?</inlineHelpText>
    <label>Business Benefit</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>