force-app/main/default/objects/Customer_Reference__c/fields/Complete_Solution__c.field-meta.xml
<CustomField>
    <fullName>Complete_Solution__c</fullName>
    <description>What did you do? (i.e., the solution to the problem)</description>
    <inlineHelpText>What did you do? (i.e., the solution to the problem)</inlineHelpText>
    <label>Complete Solution</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>