force-app/main/default/objects/Customer_Reference__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>What hindered you/your team from being able to solve this problem before?</description>
    <inlineHelpText>What hindered you/your team from being able to solve this problem before?</inlineHelpText>
    <label>Context</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>