force-app/main/default/objects/Customer_Reference__c/fields/Customer_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Customer_Challenge__c</fullName>
    <description>What problem were you trying to solve?</description>
    <inlineHelpText>What problem were you trying to solve?</inlineHelpText>
    <label>Customer Challenge</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>