force-app/main/default/objects/Customer_Reference__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <inlineHelpText>Please list the primary customer contact for this reference (e.g., if final slide approval is needed)</inlineHelpText>
    <label>Customer Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>