force-app/main/default/objects/Customer_Reference__c/fields/Customer_Reference_Count__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Reference Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>