force-app/main/default/objects/Customer_Reference__c/fields/Events_approved__c.field-meta.xml
<CustomField>
    <fullName>Events_approved__c</fullName>
    <description>Indicate which specific platform(s) this reference is approved for.</description>
    <label>Events approved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GTC Spring 2021</fullName>
            </value>
            <value>
                <fullName>GTC China 2020</fullName>
            </value>
            <value>
                <fullName>Supercomputing 2020</fullName>
            </value>
            <value>
                <fullName>GTC Fall 2020</fullName>
            </value>
            <value>
                <fullName>MLPerf May 2020</fullName>
            </value>
            <value>
                <fullName>GTC San Jose 2020</fullName>
            </value>
            <value>
                <fullName>Computex 2021</fullName>
            </value>
            <value>
                <fullName>MWC 2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>