force-app/main/default/objects/Customer_Reference__c/fields/Headline__c.field-meta.xml
<CustomField>
    <fullName>Headline__c</fullName>
    <label>Headline/Title/Announcement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>