force-app/main/default/objects/Customer_Reference__c/fields/Link_to_Blog__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Blog__c</fullName>
    <label>Link to Blog</label>
    <type>Url</type>
</CustomField>