force-app/main/default/objects/Customer_Reference__c/fields/Link_to_Cust__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Cust__c</fullName>
    <label>Link to Cust. Stories Deck</label>
    <type>Url</type>
</CustomField>