force-app/main/default/objects/Customer_Reference__c/fields/Link_to_GTC_talks__c.field-meta.xml
<CustomField>
    <fullName>Link_to_GTC_talks__c</fullName>
    <label>Link to GTC talks</label>
    <type>Url</type>
</CustomField>