force-app/main/default/objects/Customer_Reference__c/fields/Link_to_Logo__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Logo__c</fullName>
    <inlineHelpText>Uploaded to NVDAM as WWFO Partner Logo</inlineHelpText>
    <label>Link to High-res Logo</label>
    <type>Url</type>
</CustomField>