force-app/main/default/objects/Customer_Reference__c/fields/Link_to_Video__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Video__c</fullName>
    <label>Link to Video</label>
    <type>Url</type>
</CustomField>