force-app/main/default/objects/Customer_Reference__c/fields/Link_to_VoC__c.field-meta.xml
<CustomField>
    <fullName>Link_to_VoC__c</fullName>
    <label>Link to VoC</label>
    <type>Url</type>
</CustomField>