force-app/main/default/objects/Customer_Reference__c/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <inlineHelpText>Add additional product details (e.g., NeMo, Triton IS)</inlineHelpText>
    <label>Product Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>