force-app/main/default/objects/Customer_Reference__c/fields/Product_Usage_and_Results__c.field-meta.xml
<CustomField>
    <fullName>Product_Usage_and_Results__c</fullName>
    <description>What was the result? (before/after)</description>
    <inlineHelpText>What was the result? (before/after)</inlineHelpText>
    <label>NVIDIA Product Usage &amp; Results</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>