force-app/main/default/objects/Customer_Reference__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>Quote from customer. Please include name, title, and source.</description>
    <inlineHelpText>Quote from customer. Please include name, title, and source.</inlineHelpText>
    <label>Quote</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>