force-app/main/default/objects/Customer_Reference__c/fields/Reference_Product__c.field-meta.xml
<CustomField>
    <fullName>Reference_Product__c</fullName>
    <label>Reference Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Clara</fullName>
            </value>
            <value>
                <fullName>Jarvis</fullName>
                <label>Conversational AI</label>
            </value>
            <value>
                <fullName>CUDA-X</fullName>
            </value>
            <value>
                <fullName>DC Platform</fullName>
            </value>
            <value>
                <fullName>DGX Server</fullName>
            </value>
            <value>
                <fullName>DGX Station</fullName>
            </value>
            <value>
                <fullName>DPU</fullName>
            </value>
            <value>
                <fullName>DRIVE</fullName>
            </value>
            <value>
                <fullName>EGX</fullName>
            </value>
            <value>
                <fullName>Ethernet Switches</fullName>
            </value>
            <value>
                <fullName>GeForce</fullName>
            </value>
            <value>
                <fullName>GeForce Now</fullName>
            </value>
            <value>
                <fullName>HGX</fullName>
            </value>
            <value>
                <fullName>DL Inference</fullName>
                <label>Inference</label>
            </value>
            <value>
                <fullName>InfiniBand</fullName>
            </value>
            <value>
                <fullName>ISAAC</fullName>
            </value>
            <value>
                <fullName>Jetson</fullName>
            </value>
            <value>
                <fullName>Maxine</fullName>
            </value>
            <value>
                <fullName>Metropolis</fullName>
            </value>
            <value>
                <fullName>NGC</fullName>
            </value>
            <value>
                <fullName>None Specified</fullName>
            </value>
            <value>
                <fullName>Omniverse</fullName>
            </value>
            <value>
                <fullName>Optical Transceivers &amp; Cables</fullName>
            </value>
            <value>
                <fullName>Quadro</fullName>
            </value>
            <value>
                <fullName>RAPIDS</fullName>
            </value>
            <value>
                <fullName>Recommender/Merlin</fullName>
            </value>
            <value>
                <fullName>SHIELD</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
            <value>
                <fullName>TRT</fullName>
            </value>
            <value>
                <fullName>vGPU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>