force-app/main/default/objects/Customer_Reference__c/fields/Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Type__c</fullName>
    <description>In what ways is NVIDIA permitted to reference this customer?</description>
    <inlineHelpText>In what ways is NVIDIA permitted to reference this customer?</inlineHelpText>
    <label>Reference Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keynote Logo Use</fullName>
            </value>
            <value>
                <fullName>Blog/ Press Release</fullName>
            </value>
            <value>
                <fullName>Customer Story Development</fullName>
            </value>
            <value>
                <fullName>Speaker/Session Promotion</fullName>
            </value>
            <value>
                <fullName>Available for RFP</fullName>
            </value>
            <value>
                <fullName>Customer Success Story</fullName>
                <isActive>false</isActive>
                <label>Customer Success Story</label>
            </value>
            <value>
                <fullName>Logo</fullName>
                <isActive>false</isActive>
                <label>Logo</label>
            </value>
            <value>
                <fullName>Mention or Name Drop</fullName>
                <isActive>false</isActive>
                <label>Mention or Name Drop</label>
            </value>
            <value>
                <fullName>Quote or Citation</fullName>
                <isActive>false</isActive>
                <label>Quote or Citation</label>
            </value>
            <value>
                <fullName>Sales Win</fullName>
                <isActive>false</isActive>
                <label>Sales Win</label>
            </value>
            <value>
                <fullName>Speak at Event</fullName>
                <isActive>false</isActive>
                <label>Speak at Event</label>
            </value>
            <value>
                <fullName>Spotlight Slide</fullName>
                <isActive>false</isActive>
                <label>Spotlight Slide</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>