force-app/main/default/objects/Customer_Reference__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Explanation of customer story</description>
    <inlineHelpText>Explanation of customer story</inlineHelpText>
    <label>Summary</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>