force-app/main/default/objects/Customer_Reference__c/fields/Usage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Usage_Notes__c</fullName>
    <inlineHelpText>Note any additional  details on the use or restrictions for this reference</inlineHelpText>
    <label>Usage Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>