force-app/main/default/objects/Customer_Reference__c/fields/Workload__c.field-meta.xml
<CustomField>
    <fullName>Workload__c</fullName>
    <label>Workload</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Autonomous Machines</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Data Center Platform</fullName>
            </value>
            <value>
                <fullName>Embedded</fullName>
            </value>
            <value>
                <fullName>Graphics and Design</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>HPC</fullName>
            </value>
            <value>
                <fullName>NVIDIA AI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>