force-app/main/default/objects/Customer_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Reference_Product__c</columns>
    <columns>Reference_Type__c</columns>
    <columns>Approved_for_use__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>