force-app/main/default/objects/Customer_Reference__c/listViews/Expiring_Next_30_Days.listView-meta.xml
<ListView>
    <fullName>Expiring_Next_30_Days</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Reference_Product__c</columns>
    <columns>Approved_for_use__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>Expiring Next 30 Days</label>
</ListView>