force-app/main/default/objects/Customer_Reference__c/listViews/My_Customer_References.listView-meta.xml
<ListView>
    <fullName>My_Customer_References</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Reference_Product__c</columns>
    <columns>Reference_Type__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Customer References</label>
</ListView>